--- a/index.html
+++ b/index.html
@@ -11,6 +11,78 @@
 </head>
 
 <body>
+  <header class="header">
+    <div class="top-header">
+      <div class="container">
+        <nav class="nav">
+          <div class="logo">
+            <h3>
+              <a href="index.html"><span>a</span>sentus</a>
+            </h3>
+          </div>
+          <!-- /.logo -->
+          <div class="menu-wrap">
+            <div class="burger">
+              <span></span>
+            </div>
+            <!-- /.burger -->
+            <div class="menu">
+              <a href="index.html">home</a>
+              <a href="pricing.html">pricing</a>
+              <a href="about.html">about</a>
+              <a href="products.html">products</a>
+              <a href="faq.html">faq</a>
+              <a href="contact.html">contact</a>
+            </div>
+            <!-- /.menu -->
+          </div>
+          <!-- /.menu-wrap -->
+        </nav>
+        <!-- /.nav -->
+        <div class="menu-burger">
+          <a href="index.html">home</a>
+          <a href="pricing.html">pricing</a>
+          <a href="about.html">about</a>
+          <a href="products.html">products</a>
+          <a href="faq.html">faq</a>
+          <a href="contact.html">contact</a>
+        </div>
+        <!-- /.menu-burger -->
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.top-header -->
+    <div class="header-slider">
+      <div class="header-slider-block block1-slider">
+        <div class="container">
+          <div class="overlay">
+            <h2>hi-tech design</h2>
+            <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua<br>
+              enim minim estudiat veniam siad venumus dolore</p>
+            <a href="#">explore</a>
+          </div>
+          <!-- /.overlay -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.header-slider-block -->
+      <div class="header-slider-block block2-slider">
+        <div class="container">
+          <div class="overlay">
+            <h2>hi-tech design</h2>
+            <p>Lorem ipsum dolor amet consectetur adipiscing dolore magna aliqua<br>
+              enim minim estudiat veniam siad venumus dolore</p>
+            <a href="#">explore</a>
+          </div>
+          <!-- /.overlay -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.header-slider-block -->
+    </div>
+    <!-- /.header-slider -->
+  </header>
+  <!-- /.header -->
 
 
 
@@ -28,6 +100,7 @@
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
