--- a/index.html
+++ b/index.html
@@ -84,6 +84,96 @@
   </header>
   <!-- /.header -->
 
+  <main>
+    <section class="about">
+      <div class="container">
+        <div class="about-wrap">
+          <div class="card">
+            <div class="icon">
+              <i class="fas fa-atom"></i>
+            </div>
+            <!-- /.icon -->
+            <div class="content">
+              <h5>Art Of Coding</h5>
+              <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+            </div>
+            <!-- /.content -->
+            <a href="#"></a>
+          </div>
+          <!-- /.card -->
+          <div class="card">
+            <div class="icon">
+              <i class="fas fa-tablet-alt"></i>
+            </div>
+            <!-- /.icon -->
+            <div class="content">
+              <h5>Responsive Design</h5>
+              <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+            </div>
+            <!-- /.content -->
+            <a href="#"></a>
+          </div>
+          <!-- /.card -->
+          <div class="card">
+            <div class="icon">
+              <i class="fas fa-ribbon"></i>
+            </div>
+            <!-- /.icon -->
+            <div class="content">
+              <h5>Feature Reach</h5>
+              <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+            </div>
+            <!-- /.content -->
+            <a href="#"></a>
+          </div>
+          <!-- /.card -->
+          <div class="card">
+            <div class="icon">
+              <i class="fas fa-book-open"></i>
+            </div>
+            <!-- /.icon -->
+            <div class="content">
+              <h5>Useful Documentation</h5>
+              <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+            </div>
+            <!-- /.content -->
+            <a href="#"></a>
+          </div>
+          <!-- /.card -->
+          <div class="card">
+            <div class="icon">
+              <i class="fas fa-tachometer-alt"></i>
+            </div>
+            <!-- /.icon -->
+            <div class="content">
+              <h5>Fast Delivery</h5>
+              <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+            </div>
+            <!-- /.content -->
+            <a href="#"></a>
+          </div>
+          <!-- /.card -->
+          <div class="card">
+            <div class="icon">
+              <i class="fas fa-ribbon"></i>
+            </div>
+            <!-- /.icon -->
+            <div class="content">
+              <h5>Free Plugins</h5>
+              <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+            </div>
+            <!-- /.content -->
+            <a href="#"></a>
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.about-wrap -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.about -->
+  </main>
+
 
 
 
