--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Asentus</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/fontawesome.min.css">
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -27,7 +28,7 @@
             </div>
             <!-- /.burger -->
             <div class="menu">
-              <a href="index.html">home</a>
+              <a href="index.html" class="active">home</a>
               <a href="pricing.html">pricing</a>
               <a href="about.html">about</a>
               <a href="products.html">products</a>
@@ -88,7 +89,7 @@
     <section class="about">
       <div class="container">
         <div class="about-wrap">
-          <div class="card">
+          <div class="card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
             <div class="icon">
               <i class="fas fa-atom"></i>
             </div>
@@ -101,7 +102,7 @@
             <a href="#"></a>
           </div>
           <!-- /.card -->
-          <div class="card">
+          <div class="card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
             <div class="icon">
               <i class="fas fa-tablet-alt"></i>
             </div>
@@ -114,7 +115,7 @@
             <a href="#"></a>
           </div>
           <!-- /.card -->
-          <div class="card">
+          <div class="card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
             <div class="icon">
               <i class="fas fa-ribbon"></i>
             </div>
@@ -127,7 +128,7 @@
             <a href="#"></a>
           </div>
           <!-- /.card -->
-          <div class="card">
+          <div class="card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
             <div class="icon">
               <i class="fas fa-book-open"></i>
             </div>
@@ -140,7 +141,7 @@
             <a href="#"></a>
           </div>
           <!-- /.card -->
-          <div class="card">
+          <div class="card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
             <div class="icon">
               <i class="fas fa-tachometer-alt"></i>
             </div>
@@ -153,7 +154,7 @@
             <a href="#"></a>
           </div>
           <!-- /.card -->
-          <div class="card">
+          <div class="card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".6s">
             <div class="icon">
               <i class="fas fa-ribbon"></i>
             </div>
@@ -172,6 +173,75 @@
       <!-- /.container -->
     </section>
     <!-- /.about -->
+    <section class="products">
+      <div class="container">
+        <div class="title">
+          <h5>Latest Products</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua
+            enim minim veniam exercitation</p>
+        </div>
+        <!-- /.title -->
+        <div class="products-wrap">
+          <div class="card wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s">
+            <div class="img">
+              <img src="img/index/products/1.jpg" alt="">
+            </div>
+            <!-- /.img -->
+            <div class="content">
+              <div class="title-wrap">
+                <h6><a href="#">Triangle Roof</a></h6>
+                <span>management</span>
+              </div>
+              <!-- /.title-wrap -->
+              <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut
+                consequat siad esqudiat dolor</p>
+              <a href="#" class="read">read more</a>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.card -->
+          <div class="card wow zoomIn" data-wow-duration=".3" data-wow-delay=".2s">
+            <div class="img">
+              <img src="img/index/products/2.jpg" alt="">
+            </div>
+            <!-- /.img -->
+            <div class="content">
+              <div class="title-wrap">
+                <h6><a href="#">Curved Corners</a></h6>
+                <span>developmeny</span>
+              </div>
+              <!-- /.title-wrap -->
+              <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut
+                consequat siad esqudiat dolor</p>
+              <a href="#" class="read">read more</a>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.card -->
+          <div class="card wow zoomIn" data-wow-duration=".3" data-wow-delay=".3s">
+            <div class="img">
+              <img src="img/index/products/3.jpg" alt="">
+            </div>
+            <!-- /.img -->
+            <div class="content">
+              <div class="title-wrap">
+                <h6><a href="#">Bird On Green</a></h6>
+                <span>design</span>
+              </div>
+              <!-- /.title-wrap -->
+              <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut
+                consequat siad esqudiat dolor</p>
+              <a href="#" class="read">read more</a>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.products-wrap -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.products -->
   </main>
 
 
@@ -191,6 +261,7 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="js/slick.min.js"></script>
+  <script src="js/wow.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
