--- a/index.html
+++ b/index.html
@@ -242,6 +242,39 @@
       <!-- /.container -->
     </section>
     <!-- /.products -->
+    <section class="clients">
+      <div class="container">
+        <div class="clients-slider">
+          <div class="clients-slider-block">
+            <img src="img/index/clients/1.png" alt="">
+          </div>
+          <!-- /.clients-slider-block -->
+          <div class="clients-slider-block">
+            <img src="img/index/clients/2.png" alt="">
+          </div>
+          <!-- /.clients-slider-block -->
+          <div class="clients-slider-block">
+            <img src="img/index/clients/3.png" alt="">
+          </div>
+          <!-- /.clients-slider-block -->
+          <div class="clients-slider-block">
+            <img src="img/index/clients/4.png" alt="">
+          </div>
+          <!-- /.clients-slider-block -->
+          <div class="clients-slider-block">
+            <img src="img/index/clients/5.png" alt="">
+          </div>
+          <!-- /.clients-slider-block -->
+          <div class="clients-slider-block">
+            <img src="img/index/clients/6.png" alt="">
+          </div>
+          <!-- /.clients-slider-block -->
+        </div>
+        <!-- /.clients-slider -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.clients -->
   </main>
 
 
