--- a/index.html
+++ b/index.html
@@ -275,6 +275,36 @@
       <!-- /.container -->
     </section>
     <!-- /.clients -->
+    <section class="reviews">
+      <div class="container">
+        <div class="title">
+          <h5>Customer Reviews</h5>
+        </div>
+        <!-- /.title -->
+        <div class="reviews-slider">
+          <div class="reviews-slider-block">
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna
+              aliqua. Ut enim minim veniam exercitation laboris ut siad consequat siad minim enum esqudiat dolore</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret tempor incididunt
+              dolore magna consequat siad minim aliqua</p>
+            <h6><strong>Joh Milner,</strong> Metronic Customer</h6>
+          </div>
+          <!-- /.reviews-slider-block -->
+          <div class="reviews-slider-block">
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+              laborum</p>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat</p>
+            <h6><strong>Alex Clarson,</strong> Metronic Customer</h6>
+          </div>
+          <!-- /.reviews-slider-block -->
+        </div>
+        <!-- /.reviews-slider -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.reviews -->
   </main>
 
 
