--- a/index.html
+++ b/index.html
@@ -305,6 +305,72 @@
       <!-- /.container -->
     </section>
     <!-- /.reviews -->
+    <section class="pricing">
+      <div class="container">
+        <div class="pricing-wrap">
+          <div class="card">
+            <div class="icon">
+              <i class="fas fa-atom"></i>
+            </div>
+            <!-- /.icon -->
+            <div class="title">
+              <h5>Starter Kit <span>- $</span> 49</h5>
+              <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+            </div>
+            <!-- /.title -->
+            <div class="content">
+              <p>Basic Features</p>
+              <p>Up to 5 products</p>
+              <p>50 Users Panels</p>
+              <a href="pricing.html">choose</a>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.card -->
+          <div class="card prof">
+            <div class="icon">
+              <i class="fas fa-ribbon"></i>
+            </div>
+            <!-- /.icon -->
+            <div class="title">
+              <h5>Professional <span>- $</span> 149</h5>
+              <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+            </div>
+            <!-- /.title -->
+            <div class="content">
+              <p>Basic Features</p>
+              <p>Up to 100 products</p>
+              <p>100 Users Panels</p>
+              <a href="pricing.html">choose</a>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.card -->
+          <div class="card">
+            <div class="icon">
+              <i class="fas fa-shield-alt"></i>
+            </div>
+            <!-- /.icon -->
+            <div class="title">
+              <h5>Advanced <span>- $</span> 249</h5>
+              <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+            </div>
+            <!-- /.title -->
+            <div class="content">
+              <p>Extended Features</p>
+              <p>Unlimited products</p>
+              <p>Unlimited Users Panels</p>
+              <a href="pricing.html">choose</a>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.pricing-wrap -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.pricing -->
   </main>
 
 
