--- a/index.html
+++ b/index.html
@@ -371,6 +371,28 @@
       <!-- /.container -->
     </section>
     <!-- /.pricing -->
+    <section class="test">
+      <div class="container">
+        <div class="test-wrap">
+          <div class="block left">
+            <h5>Our Clients</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna
+              aliqua enim minim veniam exercitation ipsum dolor sit amet consectetur adipiscing elit sed tempor
+              incididunt ut laboret dolore magna aliqua enim minim veniam exercitation</p>
+            <p>Ipsum dolor sit amet consectetur adipiscing elit sed tempor incididut ut sead laboret dolore magna aliqua
+              enim minim veniam exercitation ipsum dolor sit amet consectetur adipiscing</p>
+          </div>
+          <!-- /.block -->
+          <div class="block right">
+            <img src="img/index/test/1.jpg" alt="">
+          </div>
+          <!-- /.block -->
+        </div>
+        <!-- /.test-wrap -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.test -->
   </main>
 
 
