--- a/index.html
+++ b/index.html
@@ -393,6 +393,86 @@
       <!-- /.container -->
     </section>
     <!-- /.test -->
+    <section class="showcase">
+      <div class="container">
+        <div class="title">
+          <h5>Showcase</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna aliqua
+            enim minim veniam exercitation</p>
+        </div>
+        <!-- /.title -->
+        <div class="showcase-wrap">
+          <div class="card card1 wow fadeInUp" data-wow-duration=".3" data-wow-delay=".1s">
+            <img src="img/index/showcase/1.jpg" alt="">
+            <div class="overlay">
+              <div class="content">
+                <h6>Art Of Coding</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing</p>
+              </div>
+              <!-- /.content -->
+            </div>
+            <!-- /.overlay -->
+            <a href="#"></a>
+          </div>
+          <!-- /.card -->
+          <div class="card card2 wow fadeInUp" data-wow-duration=".3" data-wow-delay=".2s">
+            <img src="img/index/showcase/2.jpg" alt="">
+            <div class="overlay">
+              <div class="content">
+                <h6>Clean Design</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing</p>
+              </div>
+              <!-- /.content -->
+            </div>
+            <!-- /.overlay -->
+            <a href="#"></a>
+          </div>
+          <!-- /.card -->
+          <div class="card card3 wow fadeInUp" data-wow-duration=".3" data-wow-delay=".3s">
+            <img src="img/index/showcase/3.jpg" alt="">
+            <div class="overlay">
+              <div class="content">
+                <h6>Clean Design</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing</p>
+              </div>
+              <!-- /.content -->
+            </div>
+            <!-- /.overlay -->
+            <a href="#"></a>
+          </div>
+          <!-- /.card -->
+          <div class="card card4 wow fadeInUp" data-wow-duration=".3" data-wow-delay=".4s">
+            <img src="img/index/showcase/4.jpg" alt="">
+            <div class="overlay">
+              <div class="content">
+                <h6>Clean Design</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing</p>
+              </div>
+              <!-- /.content -->
+            </div>
+            <!-- /.overlay -->
+            <a href="#"></a>
+          </div>
+          <!-- /.card -->
+          <div class="card card5 wow fadeInUp" data-wow-duration=".3" data-wow-delay=".5s">
+            <img src="img/index/showcase/5.jpg" alt="">
+            <div class="overlay">
+              <div class="content">
+                <h6>Clean Design</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing</p>
+              </div>
+              <!-- /.content -->
+            </div>
+            <!-- /.overlay -->
+            <a href="#"></a>
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.showcase-wrap -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.showcase -->
   </main>
 
 
