--- a/index.html
+++ b/index.html
@@ -475,14 +475,68 @@
     <!-- /.showcase -->
   </main>
 
-
-
-
-
-
-
-
-
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-top">
+        <div class="block left">
+          <div class="links">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Products</a>
+            <a href="#">Pricing</a>
+            <a href="#">Clients</a>
+            <a href="#">Careers</a>
+            <a href="#">Contact</a>
+            <a href="#">Terms</a>
+          </div>
+          <!-- /.links -->
+          <div class="social">
+            <a href="#">Twitter</a>
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">YouTube</a>
+          </div>
+          <!-- /.social -->
+        </div>
+        <!-- /.block -->
+        <div class="block right">
+          <h5>Send Us A Note</h5>
+          <form action="#" method="POST">
+            <input type="text" name="name" placeholder="Name" required><br>
+            <input type="text" name="email" placeholder="Email" required><br>
+            <input type="text" name="phone" placeholder="Phone" required><br>
+            <textarea placeholder="Message"></textarea>
+            <div class="btn">
+              <button>submit</button>
+            </div>
+            <!-- /.btn -->
+          </form>
+        </div>
+        <!-- /.block -->
+      </div>
+      <!-- /.footer-top -->
+    </div>
+    <!-- /.container -->
+    <div class="footer-line"></div>
+    <!-- /.footer-line -->
+    <div class="container">
+      <div class="footer-bottom">
+        <div class="logo block">
+          <h3>
+            <a href="index.html"><span>a</span>sentus</a>
+          </h3>
+        </div>
+        <!-- /.logo -->
+        <div class="copy block">
+          <p><a href="#">Asentus</a> Theme Powered by: <a href="#">KeenThemes.com</a></p>
+        </div>
+        <!-- /.copy -->
+      </div>
+      <!-- /.footer-bottom -->
+    </div>
+    <!-- /.container -->
+  </footer>
+  <!-- /.footer -->
 
 
 
