--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header" id="home">
     <div class="top-header">
       <div class="container">
         <nav class="nav">
@@ -82,6 +82,10 @@
       <!-- /.header-slider-block -->
     </div>
     <!-- /.header-slider -->
+    <div class="anchor">
+      <a href="#home">top</a>
+    </div>
+    <!-- /.anchor -->
   </header>
   <!-- /.header -->
 
