--- a/about.html
+++ b/about.html
@@ -257,7 +257,8 @@
         <div class="about-team-wrap">
           <div class="card">
             <div class="img">
-              <img src="img/about/about-team/1.jpg" alt="">
+              <img class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".1s" src="img/about/about-team/1.jpg"
+                alt="">
             </div>
             <!-- /.img -->
             <div class="content">
@@ -275,7 +276,8 @@
           <!-- /.card -->
           <div class="card">
             <div class="img">
-              <img src="img/about/about-team/2.jpg" alt="">
+              <img class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".2s" src="img/about/about-team/2.jpg"
+                alt="">
             </div>
             <!-- /.img -->
             <div class="content">
@@ -293,7 +295,8 @@
           <!-- /.card -->
           <div class="card">
             <div class="img">
-              <img src="img/about/about-team/3.jpg" alt="">
+              <img class="wow zoomIn" data-wow-duration=".3" data-wow-delay=".3s" src="img/about/about-team/3.jpg"
+                alt="">
             </div>
             <!-- /.img -->
             <div class="content">
