--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
       <!-- /.container -->
     </section>
     <!-- /.about-main -->
-    <section class="about-card">
+    <section class="about">
       <div class="container">
         <div class="about-wrap">
           <div class="card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
@@ -215,8 +215,8 @@
       </div>
       <!-- /.container -->
     </section>
-    <!-- /.about-card -->
-    <section class="about-reviews">
+    <!-- /.about -->
+    <section class="reviews">
       <div class="container">
         <div class="title">
           <h5>Notes From CEO</h5>
@@ -245,7 +245,7 @@
       </div>
       <!-- /.container -->
     </section>
-    <!-- /.about-reviews -->
+    <!-- /.reviews -->
     <div class="about-team">
       <div class="container">
         <div class="title">
